--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "20.2.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -18,7 +19,8 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "i18next": "^23.16.2",
-    "next": "13.4.2",
+    "lucide-react": "^0.453.0",
+    "next": "^15.0.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-awesome-reveal": "^4.2.3",
