--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.36",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@svgr/webpack": "^8.1.0",
@@ -18,6 +19,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "framer-motion": "^11.11.9",
     "i18next": "^23.16.2",
     "lucide-react": "^0.453.0",
     "next": "^15.0.1",
