--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^15.1.0",
     "react-icons": "^5.3.0",
+    "react-lite-youtube-embed": "^2.4.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.2",
