--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "i18next": "^23.16.2",
     "lucide-react": "^0.453.0",
     "next": "^15.0.1",
+    "nodemailer": "^6.9.16",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-awesome-reveal": "^4.2.3",
