--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=koulchiday@gmail.com
-EMAIL_PASS='wwoctiltyvpcirooi'
+EMAIL_PASS='woct ilty vpci rooi'
