--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "framer-motion": "^11.11.9",
-    "i18next": "^23.16.2",
+    "i18next": "^23.16.8",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^3.0.1",
     "lucide-react": "^0.453.0",
     "next": "^15.0.3",
+    "next-i18next": "^15.4.0",
     "nodemailer": "^6.9.16",
     "postcss": "8.4.23",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-awesome-reveal": "^4.2.3",
-    "react-dom": "18.2.0",
-    "react-i18next": "^15.1.0",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.1",
     "react-icons": "^5.3.0",
     "react-lite-youtube-embed": "^2.4.0",
     "react-slick": "^0.29.0",
