--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.453.0",
     "next": "^15.0.3",
     "next-i18next": "^15.4.0",
+    "next-intl": "^3.25.2",
     "nodemailer": "^6.9.16",
     "postcss": "8.4.23",
     "react": "^18.3.1",
